# PWS

./: .gitignore  CNAME  README.md  main.py  requirements.txt  test.pkl
.github/workflows/: docs.yml
main/: README.md  dev.py  example.py  main.py  pyproject.toml
main/docs_templates/: module.html.jinja2
main/examples/: fashion_mnist.py  generative.py  interactive.py  mnist.py
main/neural_network/: ActivationFunction.py  ActivationFunctions.py  Colors.py  Interactive.py  Layer.py  Layers.py  LossFunction.py  LossFunctions.py  MNIST.py  NeuralNetwork.py  Optimizers.py  __init__.py
main/neural_network/Datasets/: Dataset.py  FASHION_MNIST.py  MNIST.py  __init__.py
main/neural_network/datasets/: FASHION_MNIST.py  MNIST.py
main/tests/: benchmarks.py  interactive.py  plot_benchmarks.py  test_loss.py  test_sign.py
prototype/: Prototype.ipynb  config.py  data.py  main.py  model.py
src/: ActivationFunction.py  Colors.py  Layer.py  LossFunction.py  MNIST.py  NeuralNetwork.py  TODO.md  main.py  mnist.py  requirements.txt  test_loss.py  test_sign.py
src_prototype/: Prototype.ipynb  evaluation.py  extensive.txt  gui.py  interactive.py  main.py  test.py  train.py  utils.py
src_prototype/.ipynb_checkpoints/: main-checkpoint.py
src_prototype/bjarnos/: main.py
