[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neural_network"
version = "2026.7.2" # YYMMDD
description = "A simple library to train Neural Networks and test them"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [                                                                                                               
    "requests>=2.28.0,<3.0.0",                                                                                                 
    "joblib>=1.3.0,<2.0.0",                                                                                                    
    "colorama>=0.4.0,<0.5.0",                                                                                                  
    "jax>=0.10.0,<0.11.0",                                       
    "jaxlib>=0.10.0,<0.11.0",                                                                                                  
    "numpy>=2.0.0,<3.0.0",
    "kagglehub>=1.0.0,<2.0.0"                                                                                                      
]           

[project.optional-dependencies]                                                                                                
interactive = [                                                                                                                
    "pygame>=2.0.0,<3.0.0",                                                                                                    
    "matplotlib>=3.5.0,<4.0.0"                                                                                                 
]

[project.urls]
Repository = "https://github.com/Bjarnos/PWS.git"

[tool.hatch.build.targets.wheel]
packages = ["neural_network"]